[package]
name = "tendril"
version = "0.4.3"
authors = ["Keegan McAllister <mcallister.keegan@gmail.com>",
           "Simon Sapin <simon.sapin@exyr.org>",
           "Chris Morgan <me@chrismorgan.info>"]
repository = "https://github.com/servo/tendril"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Compact buffer/string type for zero-copy parsing"

[dependencies]
encoding = {version = "0.2", optional = true}
encoding_rs = {version = "0.8.12", optional = true}
mac = "0.1"
new_debug_unreachable = "1.0.2"
utf-8 = "0.7"

[dev-dependencies]
rand = "0.4"

[features]
bench = []
