[package]

name = "tendril_capi"
version = "0.0.1"
authors = ["Keegan McAllister <mcallister.keegan@gmail.com>"]
repository = "https://github.com/kmcallister/tendril"
description = "C API for tendril"
build = "build.rs"

[lib]
name = "tendril_capi"
crate-type = ["staticlib"]

[dependencies]
libc = "0.1"

[dependencies.tendril]
path = "../"
features = ["unstable"]  # Drop flags and C API don’t play friends

[build-dependencies]
gcc = "0"
